# my_audio_plugin

./: Cargo.toml  README.md  bundler.toml
.github/workflows/: rust.yml
examples/demo/src/: lib.rs  main.rs
lib/iir_filters/: Cargo.toml  README.md
lib/iir_filters/src/: cplxreal.rs  filter.rs  filter_design.rs  lib.rs  sos.rs  test_util.rs  util.rs  zpk2tf.rs
lib/iir_filters/src/macros/: assert_approx_eq.rs  cplx.rs
lib/pitch_shift/: Cargo.toml  readme.txt
lib/pitch_shift/src/: lib.rs
lib/simple-eq/: Cargo.toml  readme.txt
lib/simple-eq/src/: design.rs  filter.rs  lib.rs
plugin-canvas/: Cargo.toml
plugin-canvas/src/: window.rs
plugin-canvas/src/platform/mac/: view.rs  window.rs
plugin-canvas/src/platform/win32/: drop_target.rs  window.rs
plugin-canvas/src/platform/x11/: window.rs
plugins/copiremap/: Cargo.toml  README.md  build.rs
plugins/copiremap/src/: audio_process.rs  delay.rs  filter.rs  gate.rs  hertz_calculator.rs  hzcal.rs  key_note_midi.rs  key_note_midi_gen.rs  lib.rs  macros.rs  main.rs  note_table.rs  pitch.rs
plugins/copiremap/ui/: button.slint  button_bypass.slint  button_piano.slint  knob.slint  main.slint  parameter.slint  piano_bar.slint  slider.slint
plugins/hydro-stars/: Cargo.toml
plugins/hydro-stars/src/: dry_wet_mixer.rs  lib.rs  main.rs  stars_bank.rs  volume_table.rs
plugins/hydro-stars/ui/: main.slint  slider.slint
