[package]
name = "iir_filters"
version = "0.1.3"
authors = ["https://github.com/annoybot"]
description = "A Rust re-implementation of some of scipy's digital filters."
keywords = ["biquad", "filter", "iir"]
readme = "README.md"
license = "Apache-2.0"
repository = "https://github.com/annoybot/iir_filters"
edition = "2021"

[lib]
name = "iir_filters"

[dependencies]
num-complex.workspace = true
num-traits.workspace = true
thiserror.workspace = true

[dev-dependencies]
rstest = "0.18.2"
stdext = "^0.3.1"
