[package]
name = "CoPiReMap"
version = "0.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
nih_plug.workspace = true
nih_plug_slint.workspace = true
plugin-canvas.workspace = true
slint.workspace = true
pitch_shift.workspace = true
iir_filters.workspace = true
rust-music-theory.workspace = true
serde = { version = "1.0.197", features = ["derive"] }

[build-dependencies]
slint-build = "1.5.1"
