[package]
name = "hydro-stars"
version = "0.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
nih_plug.workspace = true
nih_plug_slint.workspace = true
plugin-canvas.workspace = true
slint.workspace = true
atomic_float.workspace = true
realfft.workspace = true
serde.workspace = true
crossbeam.workspace = true

[build-dependencies]
slint-build = "1.5"
